--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,63 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto:700|Roboto:400');
+
+:root{
+  --text: #080d13;
+  --background: #f0f5fb;
+  --primary: #2b78d9;
+  --secondary: #78aff3;
+  --accent: #368ffd;
+  --secondaryOpaque: #78aff36c;
+}
+
+body {
+  font-family: 'Roboto';
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Roboto';
+  font-weight: 700;
+}
+
+html {font-size: 100%;} /* 16px */
+
+h1 {font-size: 3.053rem; /* 48.8px */}
+
+h2 {font-size: 2.442rem; /* 39.04px */}
+
+h3 {font-size: 1.954rem; /* 31.2px */}
+
+h4 {font-size: 1.563rem; /* 24.96px */}
+
+h5 {font-size: 1.250rem; /* 20px */}
+
+small {font-size: 0.800rem; /* 12.8px */}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.button{
+  border: solid 0.5px lightgrey;
+  background-color: transparent;
+  padding: 4px 8px;
+  cursor: pointer;
+}
+
+.button:hover{
+  border: solid 0.5px lightgrey;
+  background-color: lightgrey;
+  transition: 0.4s;
+  padding: 4px 8px;
+  cursor: pointer;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+a:visited{
+  text-decoration: none;
+  color: black;
+}
