--- a/src/app/mainmenu/mainmenu.component.css
+++ b/src/app/mainmenu/mainmenu.component.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 48px;
+    height: 69px;
     overflow: hidden;
     justify-content: space-between;
     padding: 10px;
@@ -79,4 +79,11 @@
     margin-top: auto;
     list-style: none;
     text-align: center;
+  }
+
+  .background-image{
+    background: url("../../assets/background.svg");
+    background-size: cover;
+    width: 100%;
+    height: calc(100% - 69px);
   }
