--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,29 @@
-<p>profile works!</p>
+<div class="flex w-auto h-full">
+    <div
+        class="container relative p-5 rounded-lg shadow-lg border h-1/2 w-96 mx-auto my-auto bg-white">
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-black">Account Details</h5>
+
+        <div class="space-y-3">
+            <!-- <div class="flex flex-row py-5"> -->
+                <p class="content-center">Name:</p>
+                <input
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                    placeholder="Name" [(ngModel)]="user.name" [disabled]="!isEditMode">
+
+                <p class="content-center">Email:</p>
+                <input
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                    placeholder="Email" [(ngModel)]="user.email" [disabled]="!isEditMode">
+            <!-- </div> -->
+            <!-- <div class="flex flex-row"> -->
+                <p class="content-center pr-5">Phone Number:</p>
+                <input
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                    placeholder="Phone Number" [(ngModel)]="user.phoneNo" [disabled]="!isEditMode">
+            <!-- </div> -->
+        </div>
+        <div class="absolute bottom-6 right-6">
+            <button class="focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 " (click)="toggleEdit()">{{isEditMode ? 'Save' : 'Edit Profile'}}</button>
+        </div>
+    </div>
+</div>
