--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -6,15 +6,17 @@
 }
 
 body{
-height: 100vh;
+height: calc(100% - 69px);
 display: flex;
 justify-content: center;
 align-items: center;
-background-color: var(--background);
+/* background-color: white; */
+/* background: url("../../assets/background.svg");
+background-size: cover; */
 }
 
 a{
-color: white;
+color: black;
 text-decoration: underline;
 }
 
@@ -22,7 +24,7 @@ h1 {
   margin:0;
 }
 form {
-  background-color: var(--secondaryOpaque);
+  background-color: white;
   min-width: 400px;
   margin: 80px auto;
   padding: 16px 16px 24px;
@@ -33,7 +35,7 @@ form {
 
   h1 {
     margin-top: 0;
-    color: white;
+    color: black;
     /* -webkit-text-stroke: 3px black; */
     padding-bottom: 4px;
     font-size: 30px;
@@ -57,7 +59,7 @@ form {
     font-weight: 500;
     margin-bottom: 4px;
     margin-top: 4px;
-    color: white;
+    color: black;
   }
 
   input {
