--- a/src/app/mainmenu/mainmenu.component.css
+++ b/src/app/mainmenu/mainmenu.component.css
@@ -57,6 +57,12 @@
     /* align-items: center; */
   }
 
+  .active {
+    background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+    --tw-bg-opacity: 1;
+    color: white;
+  }
+
   .sidenav-container {
     display: flex;
     flex-direction: column;
@@ -71,7 +77,7 @@
   }
   
   .sidenav-container li {
-    padding: 2rem 16px;
+    padding: 1rem 16px;
     text-align: center;
   }
   
