--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -4,11 +4,11 @@
 
         <div class="sidenav-container">
             <ul>
-                <li routerLink="/mainmenu" class="cursor-pointer">Main</li>
-                <li><a href="">Leaves</a></li>
-                <li><a href="">Claims</a></li>
-                <li *ngIf="isAdmin" routerLink="/mainmenu/employeelist" class="pointer-cursor">Employee List</li>
-                <li *ngIf="isAdmin" routerLink="/mainmenu/signup" class="pointer-cursor">Register Employee</li>    
+                <li routerLink="/mainmenu" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="pointer-cursor transition ease-in-out hover:bg-green-500 hover:text-white my-4">Main</li>
+                <li routerLink = "/mainmenu/leave-application" routerLinkActive="active" class="pointer-cursor transition ease-in-out hover:bg-green-500 hover:text-white my-4">Leaves</li>
+                <li routerLink = "" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="pointer-cursor transition ease-in-out hover:bg-green-500 hover:text-white my-4">Claims</li>
+                <li *ngIf="isAdmin" routerLink="/mainmenu/employeelist" routerLinkActive="active" class="pointer-cursor transition ease-in-out hover:bg-green-500 hover:text-white my-4 target:bg-green-500 target:text-white">Employee List</li>
+                <li *ngIf="isAdmin" routerLink="/mainmenu/signup" routerLinkActive="active" class="pointer-cursor transition ease-in-out hover:bg-green-500 hover:text-white my-4">Register Employee</li>    
             </ul>
             <li routerLink="/mainmenu/profile" class="pointer-cursor"><mat-icon>account_circle</mat-icon></li>
         </div>
